Run prettier
